--- a/control
+++ b/control
@@ -5,6 +5,7 @@ Conflicts: gsc.ipad
 Version: 1.1
 Architecture: iphoneos-arm
 Description: Disable double-height status bars.
-Maintainer: insanj <insanjmail@gmail.com>
-Author: thekirbylover
+Maintainer: HASHBANG Productions <support@hbang.ws>
+Author: HASHBANG Productions <support@hbang.ws>
+Support: https://www.hbang.ws/faq/
 Section: Tweaks
